add-fix-css-maquette

--- a/envoie-projet.html
+++ b/envoie-projet.html
@@ -17,154 +17,172 @@
     <body>
 
         <div class="layout"> 
-            <header> 
-                <div class="bloc-head_background">
-                    <img class="logo_page" src="images/logo/Reservia@3x.png" alt="Reservia">
-                        <nav> 
-                            <ul> 
-                                <li> <a href="#"> Hébergements </a> </li> 
-                                <li> <a href="#">  Activités </a> </li> 
-                            </ul>
-                        </nav>
-                        <a class="sub-button" href="#">S'inscrire </a>
-                </div>
-            </header>
-            <section> 
-                <div class="bloc-research"> 
-                    <h2>Trouvez votre hébergements pour vos vacances de rêve </h2>
-                    <p class="research-text_description">En plein centre ville ou en pleine nature </p>
-                    <div class="reserch-line"> 
-                        <a href="#"> <i class="fas fa-map-marker-alt"></i> </a>
-                        <input class="research-input_text" type="text" value="Marseille, France">
-                        <input class="btn-general"type="button" value="Rechercher">
+            <div class="layouts-contenu">
+                <header> 
+                    <div class="bloc-head_background">
+                        <img class="logo_page" src="images/logo/Reservia@3x.png" alt="Reservia">
+                            <nav> 
+                                <ul> 
+                                    <li> <a href="#"> Hébergements </a> </li> 
+                                    <li> <a href="#">  Activités </a> </li> 
+                                </ul>
+                            </nav>
+                            <a class="sub-button" href="#">S'inscrire </a>
                     </div>
-                    <div class="search-filter"> 
-                        <p>Filtres </p>
-                        <div class="btn-general eco_icon"> <input type="button" value="Économique"> </div>
-                        <div class="btn-general family_icon"> <input type="button" value="Familial"> </div>
-                        <div class="btn-general heart_icon"> <input type="button" value="Romantique"> </div>
-                        <div class="btn-general animal_icon"> <input type="button" value="Animaux autorisés"> </div>
-                    </div>
-                    <div class="info-search">
-                        <i class="fas fa-info"></i>
-                        <p>plus de 500 logements sont disponibles dans cette ville </p>
-                    </div>
-                </div>
-            </section>
-            <section>
-                <div class="bloc-resa"> 
-                    <div class="bloc-resa_loc"> 
-                        <h3>Hébergements à Marseille </h3>
-                        <div class="bloc-card_location">
-                            <div class="card-location">
-                                <img class="card-img" src="images\hebergements\4_small\marcus-loke-WQJvWU_HZFo-unsplash.jpg"/>
-                                <p class="titre-card">Titre</p>
-                                <p>description</p>
-                            </div>
-                            <div class="card-location">
-                                <img class="card-img" src="images\hebergements\4_small\fred-kleber-gTbaxaVLvsg-unsplash.jpg"/>
-                                <p class="titre-card">Titre</p>
-                                <p>description</p>
-                            </div>
-                            <div class="card-location">
-                                <img class="card-img" src="images\hebergements\4_small\reisetopia-B8WIgxA_PFU-unsplash.jpg"/>
-                                <p class="titre-card">Titre</p>
-                                <p>description</p>
-                            </div>
-                            <div class="card-location">
-                                <img class="card-img" src="images\hebergements\4_small\annie-spratt-Eg1qcIitAuA-unsplash.jpg"/>
-                                <p class="titre-card">Titre</p>
-                                <p>description</p>
-                            </div>
-                            <div class="card-location">
-                                <img class="card-img" src="images\hebergements\4_small\nicate-lee-kT-ZyaiwBe0-unsplash.jpg"/>
-                                <p class="titre-card">Titre</p>
-                                <p>description</p>
-                            </div>
-                            <div class="card-location">
-                                <img class="card-img" src="images\hebergements\4_small\febrian-zakaria-M6S1WvfW68A-unsplash.jpg"/>
-                                <p class="titre-card">Titre</p>
-                                <p>description</p>
-                            </div>
+                </header>
+            </div>
+            
+            <div class="layouts-contenu">
+                <section> 
+                    <div class="bloc-research"> 
+                        <h2>Trouvez votre hébergements pour vos vacances de rêve </h2>
+                        <p class="research-text_description">En plein centre ville ou en pleine nature </p>
+                        <div class="reserch-line"> 
+                            <a href="#"> <i class="fas fa-map-marker-alt"></i> </a>
+                            <input class="research-input_text" type="text" value="Marseille, France">
+                            <input class="btn-general"type="button" value="Rechercher">
                         </div>
-                        <h3> Afficher plus </h3>
-                    </div>
-                    <div class="bloc-resa_famous">
-                        <h3>Les plus populaires</h3>
-                            <div class="bloc-card_famous">
-                                <div class="card-famous">
-                                    <img class="card-img" src="images\hebergements\4_small\emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"/>
-                                        <div class="bloc-description_famous">
-                                            <p class="titre-card">Titre</p>
-                                            <p>description</p>
-                                        </div>
-                                </div>
-                                <div class="card-famous">
-                                    <img class="card-img" src="images\hebergements\4_small\aw-creative-VGs8z60yT2c-unsplash.jpg"/>
-                                        <div class="bloc-description_famous">
-                                            <p class="titre-card">Titre</p>
-                                            <p>description</p>
-                                        </div>
-                                </div>
-                                <div class="card-famous">
-                                    <img class="card-img" src="images\hebergements\4_small\febrian-zakaria-sjvU0THccQA-unsplash.jpg"/>
-                                        <div class="bloc-description_famous">
-                                            <p class="titre-card">Titre</p>
-                                            <p>description</p>
-                                        </div>
-                                </div>
-                            </div>
+                        <div class="search-filter"> 
+                            <p>Filtres </p>
+                            <div class="btn-general eco_icon"> <input type="button" value="Économique"> </div>
+                            <div class="btn-general family_icon"> <input type="button" value="Familial"> </div>
+                            <div class="btn-general heart_icon"> <input type="button" value="Romantique"> </div>
+                            <div class="btn-general animal_icon"> <input type="button" value="Animaux autorisés"> </div>
+                        </div>
+                        <div class="info-search">
+                            <i class="fas fa-info"></i>
+                            <p>plus de 500 logements sont disponibles dans cette ville </p>
                         </div>
                     </div>
-            </section>
-            <section> 
-                <div class="bloc-activity"> 
+                </section>
+            </div>
+
+            <div class="layouts-contenu">
+                <section>
+                    <div class="bloc-resa"> 
+                        <div class="bloc-resa_loc"> 
+                            <h3>Hébergements à Marseille </h3>
+                            <div class="bloc-card_location">
+                                <div class="card-location">
+                                    <img class="card-img" src="images\hebergements\4_small\marcus-loke-WQJvWU_HZFo-unsplash.jpg"/>
+                                    <p class="titre-card">Titre</p>
+                                    <p>description</p>
+                                </div>
+                                <div class="card-location">
+                                    <img class="card-img" src="images\hebergements\4_small\fred-kleber-gTbaxaVLvsg-unsplash.jpg"/>
+                                    <p class="titre-card">Titre</p>
+                                    <p>description</p>
+                                </div>
+                                <div class="card-location">
+                                    <img class="card-img" src="images\hebergements\4_small\reisetopia-B8WIgxA_PFU-unsplash.jpg"/>
+                                    <p class="titre-card">Titre</p>
+                                    <p>description</p>
+                                </div>
+                                <div class="card-location">
+                                    <img class="card-img" src="images\hebergements\4_small\annie-spratt-Eg1qcIitAuA-unsplash.jpg"/>
+                                    <p class="titre-card">Titre</p>
+                                    <p>description</p>
+                                </div>
+                                <div class="card-location">
+                                    <img class="card-img" src="images\hebergements\4_small\nicate-lee-kT-ZyaiwBe0-unsplash.jpg"/>
+                                    <p class="titre-card">Titre</p>
+                                    <p>description</p>
+                                </div>
+                                <div class="card-location">
+                                    <img class="card-img" src="images\hebergements\4_small\febrian-zakaria-M6S1WvfW68A-unsplash.jpg"/>
+                                    <p class="titre-card">Titre</p>
+                                    <p>description</p>
+                                </div>
+                            </div>
+                            <h3> Afficher plus </h3>
+                        </div>
+                        <div class="bloc-resa_famous">
+                            <h3>Les plus populaires</h3>
+                                <div class="bloc-card_famous">
+                                    <div class="card-famous">
+                                        <img class="card-img" src="images\hebergements\4_small\emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"/>
+                                            <div class="bloc-description_famous">
+                                                <p class="titre-card">Titre</p>
+                                                <p>description</p>
+                                            </div>
+                                    </div>
+                                    <div class="card-famous">
+                                        <img class="card-img" src="images\hebergements\4_small\aw-creative-VGs8z60yT2c-unsplash.jpg"/>
+                                            <div class="bloc-description_famous">
+                                                <p class="titre-card">Titre</p>
+                                                <p>description</p>
+                                            </div>
+                                    </div>
+                                    <div class="card-famous">
+                                        <img class="card-img" src="images\hebergements\4_small\febrian-zakaria-sjvU0THccQA-unsplash.jpg"/>
+                                            <div class="bloc-description_famous">
+                                                <p class="titre-card">Titre</p>
+                                                <p>description</p>
+                                            </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                </section>
+            </div>
+
+            <div class="layouts-contenu">
+                <section> 
                     <h3>Activités à Marseille</h3>
+                    <div class="bloc-flex_activity-principal">
                         <div class="bloc-flex_activity">
-                            <div>
-                                <img src="images\activites\4_small\reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"/>
-                                <p>Titre</p>
+                            <div class="card-activity">
+                                <img class="card-img-activity_tall card-img-acivity" src="images\activites\4_small\reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"/>
+                                <p class="titre-card">Titre</p>
                             </div>
-                            <div> 
-                                <img src="images\activites\4_small\paul-hermann-QFTrLdQIRhI-unsplash.jpg"/>
-                                <p>Titre</p>
-                            </div>
-                            <div> 
-                                <img src="images\activites\4_small\kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"/>
-                                <p>Titre</p>
+                            <div class="bloc-flex_activity-right">
+                                <div class="card-activity"> 
+                                    <img class="card-img-acivity" src="images\activites\4_small\paul-hermann-QFTrLdQIRhI-unsplash.jpg"/>
+                                    <p class="titre-card">Titre</p>
+                                </div>
+                                <div class="card-activity bloc-activity_end-a"> 
+                                    <img class="card-img-acivity" src="images\activites\4_small\kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"/>
+                                    <p class="titre-card">Titre</p>
+                                </div>
                             </div>
                         </div>
                         <div class="bloc-flex_activity">
-                            <div> 
-                                <img src="images\activites\4_small\kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"/>
-                                <p>Titre</p>
+                            <div class="card-activity"> 
+                                <img class="card-img-activity_tall card-img-acivity" src="images\activites\4_small\kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"/>
+                                <p class="titre-card">Titre</p>
                             </div>
-                            <div> 
-                                <img src="images\activites\4_small\florian-wehde-xW9e8gdotxI-unsplash.jpg"/>
-                                <p>Titre</p>
-                            </div>
-                            <div> 
-                                <img src="images\activites\4_small\lena-paulin-wH2-EJoDcV0-unsplash.jpg"/>
-                                <p>Titre</p>
+                            <div class="bloc-flex_activity-right">
+                                <div class="card-activity"> 
+                                    <img class="card-img-acivity" src="images\activites\4_small\florian-wehde-xW9e8gdotxI-unsplash.jpg"/>
+                                    <p class="titre-card">Titre</p>
+                                </div>
+                                <div class="card-activity bloc-activity_end-b"> 
+                                    <img class="card-img-acivity" src="images\activites\4_small\lena-paulin-wH2-EJoDcV0-unsplash.jpg"/>
+                                    <p class="titre-card">Titre</p>
+                                </div>
                             </div>
                         </div>
                     </div>
-            </section>
+                </section>
+            </div>
+
+    <div class="bloc-footer_background">  
+        <div class="layouts-contenu">         
             <footer> 
-                <div class="bloc-footer_background"> 
-                    <div> 
+                <div class="bloc-footer"> 
+                    <div class="bloc-footer_contenu"> 
                         <h4>Titre</h4>
                         <p>textouille</p>
                         <p>textouille</p>
                         <p>textouille</p>
                     </div>
-                    <div> 
+                    <div class="bloc-footer_contenu"> 
                         <h4>Titre</h4>
                         <p>textouille</p>
                         <p>textouille</p>
                         <p>textouille</p>
                     </div>
-                    <div> 
+                    <div class="bloc-footer_contenu"> 
                         <h4>Titre</h4>
                         <p>textouille</p>
                         <p>textouille</p>
@@ -172,6 +190,7 @@
                     </div>
                 </div>
             </footer>
+        </div>  
         </div>
     </body>
 </html>
