add-responsive-search&more

--- a/envoie-projet.html
+++ b/envoie-projet.html
@@ -37,10 +37,11 @@
                     <div class="bloc-research"> 
                         <h2>Trouvez votre hébergements pour vos vacances de rêve </h2>
                         <p class="research-text_description">En plein centre ville ou en pleine nature </p>
-                        <div class="reserch-line"> 
+                        <div class="research-line"> 
                             <a href="#"> <i class="fas fa-map-marker-alt"></i> </a>
                             <input class="research-input_text" type="text" value="Marseille, France">
-                            <input class="btn-general"type="button" value="Rechercher">
+                            <span class="test"></span>
+                            <input class="btn-general recherche"type="button" value="Rechercher">
                         </div>
                         <div class="search-filter"> 
                             <p>Filtres </p>
@@ -171,22 +172,20 @@
             <footer> 
                 <div class="bloc-footer"> 
                     <div class="bloc-footer_contenu"> 
-                        <h4>Titre</h4>
-                        <p>textouille</p>
-                        <p>textouille</p>
-                        <p>textouille</p>
+                        <h4>A propos</h4>
+                        <p>Fonctionnement du site</p>
+                        <p>Conditions générales de vente</p>
+                        <p>Données et confidentialité</p>
                     </div>
                     <div class="bloc-footer_contenu"> 
-                        <h4>Titre</h4>
-                        <p>textouille</p>
-                        <p>textouille</p>
-                        <p>textouille</p>
+                        <h4>Nos hébergements</h4>
+                        <p>Charte qualité</p>
+                        <p>soumettre votre hôtel</p>
                     </div>
                     <div class="bloc-footer_contenu"> 
-                        <h4>Titre</h4>
-                        <p>textouille</p>
-                        <p>textouille</p>
-                        <p>textouille</p>
+                        <h4>Assistance</h4>
+                        <p>Centre d'aide</p>
+                        <p>Nous contacter</p>
                     </div>
                 </div>
             </footer>
