add-fix-css-responsive

--- a/envoie-projet.html
+++ b/envoie-projet.html
@@ -35,13 +35,13 @@
             <div class="layouts-contenu">
                 <section> 
                     <div class="bloc-research"> 
-                        <h2>Trouvez votre hébergements pour vos vacances de rêve </h2>
+                        <h2>Trouvez votre hébergement pour vos vacances de rêve </h2>
                         <p class="research-text_description">En plein centre ville ou en pleine nature </p>
                         <div class="research-line"> 
                             <a href="#"> <i class="fas fa-map-marker-alt"></i> </a>
                             <input class="research-input_text" type="text" value="Marseille, France">
-                            <span class="test"></span>
-                            <input class="btn-general recherche"type="button" value="Rechercher">
+                            <span class="search-icon"></span>
+                            <input class="btn-general recherche" type="button" value="Rechercher">
                         </div>
                         <div class="search-filter"> 
                             <p>Filtres </p>
@@ -65,60 +65,60 @@
                             <h3>Hébergements à Marseille </h3>
                             <div class="bloc-card_location">
                                 <div class="card-location">
-                                    <img class="card-img" src="images\hebergements\4_small\marcus-loke-WQJvWU_HZFo-unsplash.jpg"/>
-                                    <p class="titre-card">Titre</p>
-                                    <p>description</p>
+                                    <img class="card-img" src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge la Cannebière"/>
+                                    <p class="titre-card">Auberge la Cannebière</p>
+                                    <p>Nuit à partir de 25€</p>
                                 </div>
                                 <div class="card-location">
-                                    <img class="card-img" src="images\hebergements\4_small\fred-kleber-gTbaxaVLvsg-unsplash.jpg"/>
-                                    <p class="titre-card">Titre</p>
-                                    <p>description</p>
+                                    <img class="card-img" src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port"/>
+                                    <p class="titre-card">Hôtel du port</p>
+                                    <p>Nuit à partir de 52€</p>
                                 </div>
                                 <div class="card-location">
-                                    <img class="card-img" src="images\hebergements\4_small\reisetopia-B8WIgxA_PFU-unsplash.jpg"/>
-                                    <p class="titre-card">Titre</p>
-                                    <p>description</p>
+                                    <img class="card-img" src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel les mouettes"/>
+                                    <p class="titre-card">Hôtel les mouettes</p>
+                                    <p>Nuit à partir de 76€</p>
                                 </div>
                                 <div class="card-location">
-                                    <img class="card-img" src="images\hebergements\4_small\annie-spratt-Eg1qcIitAuA-unsplash.jpg"/>
-                                    <p class="titre-card">Titre</p>
-                                    <p>description</p>
+                                    <img class="card-img" src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer"/>
+                                    <p class="titre-card">Hôtel de la mer</p>
+                                    <p>Nuit à partir de 46€</p>
                                 </div>
                                 <div class="card-location">
-                                    <img class="card-img" src="images\hebergements\4_small\nicate-lee-kT-ZyaiwBe0-unsplash.jpg"/>
-                                    <p class="titre-card">Titre</p>
-                                    <p>description</p>
+                                    <img class="card-img" src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge le panier"/>
+                                    <p class="titre-card">Auberge le panier</p>
+                                    <p>Nuit à partir de 23€</p>
                                 </div>
                                 <div class="card-location">
-                                    <img class="card-img" src="images\hebergements\4_small\febrian-zakaria-M6S1WvfW68A-unsplash.jpg"/>
-                                    <p class="titre-card">Titre</p>
-                                    <p>description</p>
+                                    <img class="card-img" src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hôtel chez Amina"/>
+                                    <p class="titre-card">Hôtel chez Amina</p>
+                                    <p>Nuit à partir de 96€</p>
                                 </div>
                             </div>
-                            <h3> Afficher plus </h3>
+                            <h3 class="btn-watch_more"> Afficher plus </h3>
                         </div>
                         <div class="bloc-resa_famous">
                             <h3>Les plus populaires</h3>
                                 <div class="bloc-card_famous">
                                     <div class="card-famous">
-                                        <img class="card-img" src="images\hebergements\4_small\emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"/>
+                                        <img class="card-img" src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel le soleil du matin"/>
                                             <div class="bloc-description_famous">
-                                                <p class="titre-card">Titre</p>
-                                                <p>description</p>
+                                                <p class="titre-card">Hôtel le soleil du matin</p>
+                                                <p>Nuit à partir de 128€</p>
                                             </div>
                                     </div>
                                     <div class="card-famous">
-                                        <img class="card-img" src="images\hebergements\4_small\aw-creative-VGs8z60yT2c-unsplash.jpg"/>
+                                        <img class="card-img" src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Au coeur de l'eau Chambres d'hôtes"/>
                                             <div class="bloc-description_famous">
-                                                <p class="titre-card">Titre</p>
-                                                <p>description</p>
+                                                <p class="titre-card">Au coeur de l'eau Chambres d'hôtes</p>
+                                                <p>Nuit à partir de 71€</p>
                                             </div>
                                     </div>
                                     <div class="card-famous">
-                                        <img class="card-img" src="images\hebergements\4_small\febrian-zakaria-sjvU0THccQA-unsplash.jpg"/>
+                                        <img class="card-img" src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel tout bleu et blanc"/>
                                             <div class="bloc-description_famous">
-                                                <p class="titre-card">Titre</p>
-                                                <p>description</p>
+                                                <p class="titre-card">Hôtel tout bleu et blanc</p>
+                                                <p>Nuit à partir de 68€</p>
                                             </div>
                                     </div>
                                 </div>
@@ -133,33 +133,33 @@
                     <div class="bloc-flex_activity-principal">
                         <div class="bloc-flex_activity">
                             <div class="card-activity">
-                                <img class="card-img-activity_tall card-img-acivity" src="images\activites\4_small\reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"/>
-                                <p class="titre-card">Titre</p>
+                                <img class="card-img-activity_tall card-img-acivity" src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux Port"/>
+                                <p class="titre-card">Vieux Port</p>
                             </div>
                             <div class="bloc-flex_activity-right">
                                 <div class="card-activity"> 
-                                    <img class="card-img-acivity" src="images\activites\4_small\paul-hermann-QFTrLdQIRhI-unsplash.jpg"/>
-                                    <p class="titre-card">Titre</p>
+                                    <img class="card-img-acivity" src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues"/>
+                                    <p class="titre-card">Fort de Pomègues</p>
                                 </div>
                                 <div class="card-activity bloc-activity_end-a"> 
-                                    <img class="card-img-acivity" src="images\activites\4_small\kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"/>
-                                    <p class="titre-card">Titre</p>
+                                    <img class="card-img-acivity" src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Îles du Frioul"/>
+                                    <p class="titre-card">Îles du Frioul</p>
                                 </div>
                             </div>
                         </div>
                         <div class="bloc-flex_activity">
                             <div class="card-activity"> 
-                                <img class="card-img-activity_tall card-img-acivity" src="images\activites\4_small\kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"/>
-                                <p class="titre-card">Titre</p>
+                                <img class="card-img-activity_tall card-img-acivity" src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Parc National des Calanques"/>
+                                <p class="titre-card">Parc National des Calanques</p>
                             </div>
                             <div class="bloc-flex_activity-right">
                                 <div class="card-activity"> 
-                                    <img class="card-img-acivity" src="images\activites\4_small\florian-wehde-xW9e8gdotxI-unsplash.jpg"/>
-                                    <p class="titre-card">Titre</p>
+                                    <img class="card-img-acivity" src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde"/>
+                                    <p class="titre-card">Notre-Dame-de-la-Garde</p>
                                 </div>
                                 <div class="card-activity bloc-activity_end-b"> 
-                                    <img class="card-img-acivity" src="images\activites\4_small\lena-paulin-wH2-EJoDcV0-unsplash.jpg"/>
-                                    <p class="titre-card">Titre</p>
+                                    <img class="card-img-acivity" src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Parc longchamp"/>
+                                    <p class="titre-card">Parc longchamp</p>
                                 </div>
                             </div>
                         </div>
@@ -167,29 +167,30 @@
                 </section>
             </div>
 
-    <div class="bloc-footer_background">  
-        <div class="layouts-contenu">         
-            <footer> 
-                <div class="bloc-footer"> 
-                    <div class="bloc-footer_contenu"> 
-                        <h4>A propos</h4>
-                        <p>Fonctionnement du site</p>
-                        <p>Conditions générales de vente</p>
-                        <p>Données et confidentialité</p>
-                    </div>
-                    <div class="bloc-footer_contenu"> 
-                        <h4>Nos hébergements</h4>
-                        <p>Charte qualité</p>
-                        <p>soumettre votre hôtel</p>
-                    </div>
-                    <div class="bloc-footer_contenu"> 
-                        <h4>Assistance</h4>
-                        <p>Centre d'aide</p>
-                        <p>Nous contacter</p>
-                    </div>
-                </div>
-            </footer>
-        </div>  
+            <div class="bloc-footer_background">  
+                <div class="layouts-contenu">         
+                    <footer> 
+                        <div class="bloc-footer"> 
+                            <div class="bloc-footer_contenu"> 
+                                <h4>A propos</h4>
+                                <p>Fonctionnement du site</p>
+                                <p>Conditions générales de vente</p>
+                                <p>Données et confidentialité</p>
+                            </div>
+                            <div class="bloc-footer_contenu"> 
+                                <h4>Nos hébergements</h4>
+                                <p>Charte qualité</p>
+                                <p>soumettre votre hôtel</p>
+                            </div>
+                            <div class="bloc-footer_contenu"> 
+                                <h4>Assistance</h4>
+                                <p>Centre d'aide</p>
+                                <p>Nous contacter</p>
+                            </div>
+                        </div>
+                    </footer>
+                </div>  
+            </div>
         </div>
     </body>
 </html>
