add-fix-responsive

--- a/envoie-projet.html
+++ b/envoie-projet.html
@@ -23,8 +23,8 @@
                         <img class="logo_page" src="images/logo/Reservia@3x.png" alt="Reservia">
                             <nav> 
                                 <ul> 
-                                    <li> <a href="#"> Hébergements </a> </li> 
-                                    <li> <a href="#">  Activités </a> </li> 
+                                    <li> <a href="#location"> Hébergements </a> </li> 
+                                    <li> <a href="#activity">  Activités </a> </li> 
                                 </ul>
                             </nav>
                             <a class="sub-button" href="#">S'inscrire </a>
@@ -62,7 +62,7 @@
                 <section>
                     <div class="bloc-resa"> 
                         <div class="bloc-resa_loc"> 
-                            <h3>Hébergements à Marseille </h3>
+                            <h3 id="location" >Hébergements à Marseille </h3>
                             <div class="bloc-card_location">
                                 <a href="#">
                                     <div class="card-location">
@@ -107,7 +107,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <h3 class="btn-watch_more"> Afficher plus </h3>
+                            <a href="#"> <h3 class="btn-watch_more"> Afficher plus </h3> </a>
                         </div>
                         <div class="bloc-resa_famous">
                             <h3>Les plus populaires</h3>
@@ -150,7 +150,7 @@
                     <h3>Activités à Marseille</h3>
                     <div class="bloc-flex_activity-principal">
                         <div class="bloc-flex_activity">
-                            <div class="card-activity">
+                            <div class="card-activity test">
                                 <a href="#">
                                     <img class="card-img-activity_tall card-img-acivity" src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux Port"/>
                                     <p class="titre-card">Vieux Port</p>
@@ -186,7 +186,7 @@
                                         <p class="titre-card">Notre-Dame-de-la-Garde</p>
                                     </a>
                                 </div>
-                                <div class="card-activity bloc-activity_end-b">
+                                <div id="activity" class="card-activity bloc-activity_end-b">
                                     <a href="#"> 
                                         <img class="card-img-acivity" src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Parc longchamp"/>
                                         <p class="titre-card">Parc longchamp</p>
