--- a/envoie-projet.html
+++ b/envoie-projet.html
@@ -16,10 +16,10 @@
 
     <body>
 
-        <div class="layout"> 
+        <main> 
             <div class="layouts-contenu">
                 <header> 
-                    <div class="bloc-head_background">
+                    <div class="bloc-head_nav">
                         <img class="logo_page" src="images/logo/Reservia@3x.png" alt="Reservia">
                             <nav> 
                                 <ul> 
@@ -30,9 +30,7 @@
                             <a class="sub-button" href="#">S'inscrire </a>
                     </div>
                 </header>
-            </div>
             
-            <div class="layouts-contenu">
                 <section> 
                     <div class="bloc-research"> 
                         <h2>Trouvez votre hébergement pour vos vacances de rêve </h2>
@@ -56,9 +54,7 @@
                         </div>
                     </div>
                 </section>
-            </div>
 
-            <div class="layouts-contenu">
                 <section>
                     <div class="bloc-resa"> 
                         <div class="bloc-resa_loc"> 
@@ -143,11 +139,9 @@
                             </div>
                         </div>
                 </section>
-            </div>
 
-            <div class="layouts-contenu">
                 <section> 
-                    <h3>Activités à Marseille</h3>
+                    <h3 id="activity">Activités à Marseille</h3>
                     <div class="bloc-flex_activity-principal">
                         <div class="bloc-flex_activity">
                             <div class="card-activity test">
@@ -186,7 +180,7 @@
                                         <p class="titre-card">Notre-Dame-de-la-Garde</p>
                                     </a>
                                 </div>
-                                <div id="activity" class="card-activity bloc-activity_end-b">
+                                <div class="card-activity bloc-activity_end-b">
                                     <a href="#"> 
                                         <img class="card-img-acivity" src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Parc longchamp"/>
                                         <p class="titre-card">Parc longchamp</p>
@@ -223,6 +217,6 @@
                     </footer>
                 </div>  
             </div>
-        </div>
+        </main>
     </body>
 </html>
