--- a/envoie-projet.html
+++ b/envoie-projet.html
@@ -64,42 +64,42 @@
                                     <div class="card-location">
                                         <img class="card-img" src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge la Cannebière"/>
                                         <p class="titre-card">Auberge la Cannebière</p>
-                                        <p>Nuit à partir de 25€</p>
+                                        <p>Nuit à partir de <span>25€</span></p>
                                     </div>
                                 </a>
                                 <a href="#">
                                     <div class="card-location">
                                         <img class="card-img" src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port"/>
                                         <p class="titre-card">Hôtel du port</p>
-                                        <p>Nuit à partir de 52€</p>
+                                        <p>Nuit à partir de 52<span>€</span></p>
                                     </div>
                                 </a>
                                 <a href="#">
                                     <div class="card-location">
                                         <img class="card-img" src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel les mouettes"/>
                                         <p class="titre-card">Hôtel les mouettes</p>
-                                        <p>Nuit à partir de 76€</p>
+                                        <p>Nuit à partir de 76<span>€</span></p>
                                     </div>
                                 </a>
                                 <a href="#">
                                     <div class="card-location">
                                         <img class="card-img" src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer"/>
                                         <p class="titre-card">Hôtel de la mer</p>
-                                        <p>Nuit à partir de 46€</p>
+                                        <p>Nuit à partir de 46<span>€</span></p>
                                     </div>
                                 </a>
                                 <a href="#">
                                     <div class="card-location">
                                         <img class="card-img" src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge le panier"/>
                                         <p class="titre-card">Auberge le panier</p>
-                                        <p>Nuit à partir de 23€</p>
+                                        <p>Nuit à partir de <span>23€</span></p>
                                     </div>
                                 </a>
                                 <a href="#">
                                     <div class="card-location">
                                         <img class="card-img" src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hôtel chez Amina"/>
                                         <p class="titre-card">Hôtel chez Amina</p>
-                                        <p>Nuit à partir de 96€</p>
+                                        <p>Nuit à partir de 96<span>€</span></p>
                                     </div>
                                 </a>
                             </div>
@@ -113,7 +113,7 @@
                                             <img class="card-img" src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel le soleil du matin"/>
                                                 <div class="bloc-description_famous">
                                                     <p class="titre-card">Hôtel le soleil du matin</p>
-                                                    <p>Nuit à partir de 128€</p>
+                                                    <p>Nuit à partir de 128<span>€</span></p>
                                                 </div>
                                         </div>
                                     </a>
@@ -122,7 +122,7 @@
                                         <img class="card-img" src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Au coeur de l'eau Chambres d'hôtes"/>
                                             <div class="bloc-description_famous">
                                                 <p class="titre-card">Au coeur de l'eau Chambres d'hôtes</p>
-                                                <p>Nuit à partir de 71€</p>
+                                                <p>Nuit à partir de 71<span>€</span></p>
                                             </div>
                                     </div>
                                     </a>
@@ -131,7 +131,7 @@
                                             <img class="card-img" src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel tout bleu et blanc"/>
                                                 <div class="bloc-description_famous">
                                                     <p class="titre-card">Hôtel tout bleu et blanc</p>
-                                                    <p>Nuit à partir de 68€</p>
+                                                    <p>Nuit à partir de 68<span>€</span></p>
                                                 </div>
                                         </div>
                                     </a>
